k8s-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-native-go
  labels:
    app: cloud-native-go
    language: go
    env: test
    tier: frontend
spec:
  containers:
    - image: gcr.io/nattapon/cloud-native-go
      name: cloud-native-go
      ports:
        - containerPort: 8080
          protocol: TCP
      resources:
        requests:
          memory: "16Mi"
          cpu: "125m"
        limits:
          memory: "64Mi"
          cpu: "250m"
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        allowPrivilegeEscalation: false
