k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-go
  labels:
    app: cloud-native-go
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31007
  selector:
    app: cloud-native-go
